Feature/action overload (#249)
* Generate metadata for overloaded action

* Process action

* Use constructor of entity type an action is called for not of binding